crates/sifr_python_parser/src/snapshots/sifr_python_parser__string__tests__carriage_return_alias.snap
---
source: crates/sifr_python_parser/src/string.rs
expression: parse_ast
---
[
    Expr(
        StmtExpr {
            range: 0..21,
            value: StringLiteral(
                ExprStringLiteral {
                    range: 0..21,
                    value: StringLiteralValue {
                        inner: Single(
                            StringLiteral {
                                range: 0..21,
                                value: "\r",
                                flags: StringLiteralFlags {
                                    quote_style: Double,
                                    prefix: Empty,
                                    triple_quoted: false,
                                },
                            },
                        ),
                    },
                },
            ),
        },
    ),
]
