crates/sifr_python_parser/src/snapshots/sifr_python_parser__string__tests__dont_panic_on_8_in_octal_escape.snap
---
source: crates/sifr_python_parser/src/string.rs
expression: parse_ast
---
[
    Assign(
        StmtAssign {
            range: 0..16,
            targets: [
                Name(
                    ExprName {
                        range: 0..4,
                        id: "bold",
                        ctx: Store,
                    },
                ),
            ],
            value: StringLiteral(
                ExprStringLiteral {
                    range: 7..16,
                    value: StringLiteralValue {
                        inner: Single(
                            StringLiteral {
                                range: 7..16,
                                value: "\u{3}8[1m",
                                flags: StringLiteralFlags {
                                    quote_style: Single,
                                    prefix: Empty,
                                    triple_quoted: false,
                                },
                            },
                        ),
                    },
                },
            ),
        },
    ),
]
