crates/sifr_python_parser/src/snapshots/sifr_python_parser__string__tests__escape_octet.snap
---
source: crates/sifr_python_parser/src/string.rs
expression: parse_ast
---
[
    Expr(
        StmtExpr {
            range: 0..14,
            value: BytesLiteral(
                ExprBytesLiteral {
                    range: 0..14,
                    value: BytesLiteralValue {
                        inner: Single(
                            BytesLiteral {
                                range: 0..14,
                                value: [
                                    35,
                                    97,
                                    4,
                                    83,
                                    52,
                                ],
                                flags: BytesLiteralFlags {
                                    quote_style: Single,
                                    prefix: Regular,
                                    triple_quoted: false,
                                },
                            },
                        ),
                    },
                },
            ),
        },
    ),
]
